[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "EasyGlobals"
version = "0.9.0"
authors = [
  { name="Yacob", email="asnaeb2@gmail.com" },
]
description = "An easy to use variable sharing object for Python that can quickly share complex objects between processes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"